# effective2

./: .gitignore  ChangeLog.md  README.md  Setup.hs  cabal.project  cabal.project.ci  effective.cabal
.github/workflows/: ci.yml  haskell.yml
docs/: Error.md  Graded.md  Main.hs  Main.md  Nondet.md  Parser.md  Staging.hs  StagingHelper.hs  State.md  Transformers.md
examples/: Error.hs  Error.lhs  Main.hs  Main.lhs  Nondet.hs  Parser.hs  Parser.lhs  State.hs
src/: Effective.hs
src/Control/: Effect.hs  Family.hs
src/Control/Effect/: Accum.hs  Algebraic.hs  Alternative.hs  Binding.hs  Catch.hs  Clone.hs  CodeGen.hs  Concurrency.hs  Cut.hs  Except.hs  Expr.hs  IO.hs  Latent.hs  Logic.hs  Maybe.hs  Nondet.hs  Parallel.hs  Plugin.hs  Reader.hs  Scoped.hs  State.hs  Throw.hs  Tree.hs  Type.hs  WithName.hs  Writer.hs  Yield.hs
src/Control/Effect/Alternative/: Internal.hs  Type.hs
src/Control/Effect/CodeGen/: Concurrency.hs  Down.hs  Eval.hs  Gen.hs  JoinFlow.hs  Nondet.hs  SoPU.hs  Split.hs  Type.hs  Up.hs
src/Control/Effect/Concurrency/: Type.hs
src/Control/Effect/Family/: Algebraic.hs  Distributive.hs  Scoped.hs
src/Control/Effect/HStore/: Safe.hs  Unsafe.hs
src/Control/Effect/Internal/: AlgTrans.hs  Effs.hs  Forward.hs  Handler.hs  Prog.hs  Runner.hs  TH.hs
src/Control/Effect/Internal/AlgTrans/: Type.hs
src/Control/Effect/Internal/Effs/: Array.hs  Class.hs  Indexed.hs  Sum.hs  Type.hs
src/Control/Effect/Internal/Effs/Indexed/: Class.hs  Type.hs
src/Control/Effect/Internal/Effs/Sum/: Type.hs
src/Control/Effect/Internal/Prog/: ProgDirect.hs  ProgImp.hs
src/Control/Effect/Nondet/: List.hs  Logic.hs  Type.hs
src/Control/Effect/State/: Lazy.hs  Strict.hs  Type.hs
src/Control/Family/: Algebraic.hs  Latent.hs  Parallel.hs  Scoped.hs  Split.hs
src/Control/Monad/: Graded.hs
src/Control/Monad/Trans/: CRes.hs  Compose.hs  ComposesT.hs  CutList.hs  List.hs  Push.hs  Resump.hs  ResumpUp.hs  TCompose.hs  Tree.hs  YRes.hs
src/Control/Monad/Trans/CutList/: CPS.hs
src/Data/: CutList.hs  HFunctor.hs  IFunctor.hs
src/Data/Functor/: Composes.hs
src/Data/HFunctor/: HCompose.hs  HComposes.Failed.hs  HComposes.hs
src/Data/List/: Kind.hs  TypeLevel.hs
test/: Concur.hs  DocTest.hs  Eval.hs  HOStore.hs  Misc.hs  Staged.hs  StagedGen.hs
