name:                effective
version:             0.1.0.0
synopsis:            Effect handlers
description:         Effect handlers
license:             BSD3
license-file:        LICENSE
author:              Nicolas Wu
maintainer:          nicolas.wu@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/zenzike/effective

library
  default-language: GHC2021
  exposed-modules:
    Effective
    Data.Functor.Composes
    Data.HFunctor
    Data.HFunctor.HComposes

  hs-source-dirs:
    src
  build-depends:
    base, mtl, transformers, ghc,
    -- ghc-tcplugins-extra,
    containers
      , sop-core

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       DocTest.hs
  hs-source-dirs:  test, src
  build-depends: base, doctest >= 0.8, markdown-unlit
