name:                effective
version:             0.1.0.0
synopsis:            Effect handlers
description:         Effect handlers
license:             BSD3
license-file:        LICENSE
author:              Nicolas Wu
maintainer:          nicolas.wu@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/zenzike/effective

library
  default-language: GHC2021
  exposed-modules:
    Control.Effect
    Control.Effect.Catch
    Control.Effect.Cut
    Control.Effect.Except
    Control.Effect.Nondet
    Control.Effect.State
    Control.Effect.Throw
    Data.Functor.Composes
    Data.HFunctor
    Data.HFunctor.HComposes
    Data.CutList
    Data.List.Kind

  hs-source-dirs:
    src
  build-depends:
    base, mtl, transformers, ghc,
    containers,
    sop-core

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       DocTest.hs
  default-language: GHC2021
  hs-source-dirs:  test, src
  build-depends: base, doctest >= 0.8, markdown-unlit,
    sop-core

test-suite examples
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       Main.hs
  hs-source-dirs: examples, src
  build-depends: base, hedgehog, transformers, sop-core, mtl
  default-language: GHC2021

  other-modules:
    Error
    Nondet
    Parser
    State
