cabal-version:       3.0
name:                effective
version:             0.1.0.0
synopsis:            Effect handlers
description:         Effect handlers
license:             BSD-3-Clause
license-file:        LICENSE
author:              Nicolas Wu
maintainer:          nicolas.wu@gmail.com
-- copyright:
category:            Control
build-type:          Custom
extra-source-files:
    docs/*.md

custom-setup
  setup-depends:
    base,
    Cabal

source-repository head
  type: git
  location: https://github.com/zenzike/effective

library
  default-language: GHC2021
  ghc-options: -Wunused-foralls -Wunused-imports -fprint-potential-instances -fspecialise-aggressively -fexpose-all-unfoldings -ddump-simpl -ddump-to-file
  exposed-modules:
    Control.Effect
    Control.Effect.Alternative
    Control.Effect.Alternative.Type
    Control.Effect.Type
    Control.Effect.Cut
    Control.Effect.Except
    Control.Effect.IO
    Control.Effect.Maybe
    Control.Effect.Nondet
    Control.Effect.Reader
    Control.Effect.State
    Control.Effect.State.Type
    Control.Effect.State.Lazy
    Control.Effect.State.Strict
    Control.Effect.Tree
    Control.Effect.Writer
    Control.Family
    Control.Family.Algebraic
    Control.Family.Scoped
    Control.Family.Parallel
    Control.Monad.Graded
    Control.Monad.Trans.List
    Control.Monad.Trans.Tree
    Data.HFunctor
    Control.Monad.Trans.Compose
    Data.CutList
    Data.List.Kind
    Data.Nat
  hs-source-dirs:
    src
  build-depends:
    base, transformers, ghc, array

test-suite docs
  type:          exitcode-stdio-1.0
  build-depends: base, transformers, effective, hedgehog
  main-is:       Main.hs
  ghc-options:   -threaded -Wunused-foralls -Wunused-imports -fprint-potential-instances
  hs-source-dirs: docs
  build-tool-depends: markdown-unlit:markdown-unlit>=0.6
  default-language: GHC2021
  other-modules:
    Error,
--     Graded,
    Nondet,
    Parser,
    State,

test-suite readme
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded -pgmL markdown-unlit
  main-is:       README.lhs
  default-language: GHC2021
  hs-source-dirs:  .
  build-depends: base, transformers, effective, hedgehog
  build-tool-depends: markdown-unlit:markdown-unlit>=0.6
